--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@vercel/analytics": "^1.5.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "framer-motion": "^12.23.12",
+    "framer-motion": "^12.23.13",
+    "lottie-web": "^5.13.0",
     "lucide-react": "^0.543.0",
     "next": "15.5.3",
     "react": "19.1.0",
