--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   "dependencies": {
     "@radix-ui/react-slot": "^1.2.3",
     "@vercel/analytics": "^1.5.0",
-    "@wix/sdk": "^1.15.27",
+    "@wix/categories": "^1.0.153",
+    "@wix/sdk": "^1.17.1",
     "@wix/stores": "^1.0.507",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.13",
+    "js-cookie": "^3.0.5",
     "lottie-web": "^5.13.0",
     "lucide-react": "^0.543.0",
     "next": "15.5.3",
