--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@radix-ui/react-slot": "^1.2.3",
     "@vercel/analytics": "^1.5.0",
+    "@vercel/speed-insights": "^1.2.0",
     "@wix/categories": "^1.0.153",
     "@wix/sdk": "^1.17.1",
     "@wix/stores": "^1.0.507",
