--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "build:clean": "next build",
     "start": "next start",
     "lint": "eslint",
     "setup-wix": "node scripts/setup-env.js"
@@ -17,7 +18,10 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
+    "@wix/blog": "^1.0.488",
     "@wix/categories": "^1.0.153",
+    "@wix/media": "^1.0.189",
+    "@wix/ricos": "^10.143.0",
     "@wix/sdk": "^1.17.1",
     "@wix/stores": "^1.0.507",
     "class-variance-authority": "^0.7.1",
