--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "setup-wix": "node scripts/setup-env.js"
   },
   "dependencies": {
+    "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-separator": "^1.1.7",
@@ -26,7 +27,7 @@
     "@wix/stores": "^1.0.507",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "framer-motion": "^12.23.13",
+    "framer-motion": "^12.23.22",
     "js-cookie": "^3.0.5",
     "lottie-web": "^5.13.0",
     "lucide-react": "^0.543.0",
